tests/machine/x/st/nested_function.out
Object: 8 error: return from a dead method context
SystemExceptions.BadReturn(Exception)>>signal (ExcHandling.st:254)
SystemExceptions.BadReturn class(Exception class)>>signal (ExcHandling.st:151)
SmallInteger(Object)>>badReturnError (Object.st:1389)
[] in UndefinedObject>>executeStatements (../../../tests/machine/x/st/nested_function.st:3)
UndefinedObject>>executeStatements (../../../tests/machine/x/st/nested_function.st:4)